<resources>
    <string name="app_name">WGA</string>
    <string name="instruction_text">가족에게 공유받은 코드를 입력해주세요!</string>
    <string name="first_family_text">내가 가족들 중 처음이라면?</string>
    <string name="get_code_text">제가 가족 중 처음이에요</string>
    <string name="input_prompt_text">코드 8자리를 입력해 주세요</string>
    <string name="submit_button_text">입력 완료</string>
    <string name="welcome_message">WGA에 오신 걸 환영해요!</string>
    <string name="wga_message">WGA에서는</string>
    <string name="question_message">질문을 통해 소통해요</string>
    <string name="schedule_message">가족들의 일정을 확인할 수 있어요</string>
    <string name="letter_message">편지를 주고 받을 수 있어요</string>
    <string name="goods_message">우리 가족만의 굿즈를 만들어요</string>
    <string name="next_button">다음</string>
    <string name="signup_in_progress">회원가입 진행중...</string>
    <string name="easy_signup_question">간편 가입을 원한다면?</string>
    <string name="start_with_kakao">카카오로 시작하기</string>
    <string name="password">패스워드</string>
    <string name="password_check">패스워드를 한 번 더 입력해주세요</string>
    <string name="id">아이디</string>
    <string name="login_instruction">로그인을 위해 \n 아이디와 패스워드를 입력해 주세요!</string>
    <string name="signup_instruction">회원가입을 위해 \n 아이디와 패스워드를 입력해 주세요!</string>
    <string name="next">다음</string>
    <string name="personal_info_input">개인 정보 입력중...</string>
    <string name="setup_prompt">초기 설정을 위한 개인 정보를 입력해 주세요!</string>
    <string name="profile_image">프로필 이미지</string>
    <string name="name_required">이름 (필수)</string>
    <string name="nickname_required">닉네임 (필수)</string>
    <string name="phone_optional">휴대폰 번호 (선택)</string>
    <string name="real_name_warning">실명을 입력해 주세요</string>
    <string name="gender">성별</string>
    <string name="gender_female">여성</string>
    <string name="gender_male">남성</string>
    <string name="gender_other">그외</string>
    <string name="birthdate">생년월일</string>
    <string name="year_hint">년도</string>
    <string name="month_hint">월</string>
    <string name="day_hint">일</string>
    <string name="previous">이전</string>
    <string name="family_name_prompt">우리 가족에게 이름을 지어 주세요!</string>
    <string name="name_hint">이름을 입력해 주세요 (10자 이내)</string>
    <string name="private_view_hint">나에게만 보여요~</string>
    <string name="family_code_intro">우리 가족 고유 코드는</string>
    <string name="family_code_suffix">이에요~</string>
    <string name="share_code_prompt">우리 가족에게 코드를 공유해 보세요!</string>
    <string name="permission_prompt">알림 권한을 허용해 주세요!</string>
    <string name="notification_info">알림 기능이 켜져 있어야 \n가족들의 소식을 빠르게 전달해 드릴 수 있어요!</string>
    <string name="question_number">Q1.</string>
    <string name="question_text">우리 가족과 가장 하고 싶은 것은?</string>
    <string name="daughter_name">딸</string>
    <string name="mother_name">엄마</string>
    <string name="father_name">아빠</string>
    <string name="sibling_name">동생</string>
    <string name="after_answer_info">답변 후에 가족들의 답변을 볼 수 있어요~</string>
    <string name="daughter_answer_placeholder">이곳을 눌러서 답변을 입력해 주세요!</string>
    <string name="noseeing">아직 볼 수 없어요...</string>
    <string name="start">WGA 시작하기</string>
    <string name="successful">가입성공!</string>
    <string name="together">우리 가족과 함께하는</string>
    <string name="welcome">WGA에 오신 것을 환영해요!</string>
    <string name="wga_history">질문에 대한 답변은 WGA HISTORY에 기록돼요!</string>
    <string name="answer_hint">답변을 입력해 주세요.</string>
    <string name="save_button">저장</string>
    <string name="cancel_button">취소</string>
    <string name="xxx">\'XXXXXXXX\'</string>
    <string name="wga_history_text">WGA HISTORY</string>
    <string name="favorite_icon_desc">Favorite icon</string>
    <string name="mail_icon_desc">Mail icon</string>
    <string name="today_icon_desc">Today icon</string>
    <string name="more_icon_desc">More icon</string>
    <string name="list_icon_desc">List icon</string>
    <string name="question_1">Q1.</string>
    <string name="question_1_text">우리 가족과 가장 하고 싶은 것은?</string>
    <string name="question_2_text">당신이 꿈꾸는 미래의 모습은 무엇인가요?</string>
    <string name="question_3_text">다시 돌아갈 수 있다면 고치고 싶은 과거의 선택은 무엇인가요?</string>
    <string name="question_4_text">가족이 함께 떠나고 싶은 여행지가 있다면 어디인가요?</string>
    <string name="question_5_text">최근에 감사하게 느낀 일이 있나요?</string>
    <string name="question_6_text">지금까지 경험한 일 중 가장 용감했다고 느낀 순간은 언제인가요?</string>
    <string name="question_7_text">가족 중 한 명과 하루를 보내야 한다면, 누구와 무엇을 하고 싶나요?</string>
    <string name="question_8_text">요즘 가장 큰 고민이나 걱정은 무엇인가요?</string>
    <string name="question_9_text">어렸을 때 가장 행복했던 기억은 무엇인가요?</string>
    <string name="question_10_text">가족에게 꼭 해주고 싶은 말이 있다면 무엇인가요?</string>
    <string name="question_11_text">당신이 가장 존경하는 사람은 누구인가요?</string>
    <string name="question_12_text">가장 기억에 남는 가족 여행은 무엇이었나요?</string>
    <string name="question_13_text">지금까지 가족에게 가장 고마웠던 순간은 언제인가요?</string>
    <string name="question_14_text">만약 시간여행을 할 수 있다면 어떤 시점으로 돌아가고 싶나요?</string>
    <string name="question_15_text">가족과 함께 하고 싶은 미래의 계획은 무엇인가요?</string>
    <string name="question_16_text">가장 좋아하는 가족 전통이 있나요?</string>
    <string name="question_17_text">가족 중 누군가에게 꼭 해주고 싶은 조언이 있다면 무엇인가요?</string>
    <string name="question_18_text">가족과 함께 보고 싶은 영화가 있다면 무엇인가요?</string>
    <string name="question_19_text">당신의 어린 시절 꿈은 무엇이었나요?</string>
    <string name="question_20_text">가족 중 한 명에게 미안한 일이 있다면 무엇인가요?</string>
    <string name="discussion_prompt">서로의 답변에 대해 이야기 할 수 있어요!</string>
    <string name="comment_prompt">댓글 달기</string>
    <string name="calendar_info_text">일정을 등록하면\n모든 가족이 확인할 수 있어요!</string>
    <string name="calendar">캘린더</string>
    <string name="date">2024년 9월</string>
    <string name="send_letter_prompt">우리 가족에게 편지를 보낼 수 있어요!</string>
    <string name="folder_text">보관함</string>
    <string name="time_capsule_text">타임 캡슐</string>
    <string name="title_input">제목을 입력해 주세요</string>
    <string name="content_input">내용을 입력해 주세요</string>
    <string name="send_text">보내기</string>
    <string name="header_text">우리 가족으로 다양한 굿즈를 만들 수 있어요!</string>
    <string name="card_text">카드</string>
    <string name="calendar_text">달력</string>
    <string name="clothing_text">패션의류</string>
    <string name="sticker_text">스티커</string>
    <string name="phone_case_text">폰케이스</string>
    <string name="home_living_text">홈/리빙</string>
    <string name="frame_text">액자</string>
    <string name="photo_book_text">포토북</string>
    <string name="photo_print_text">사진 인화</string>
    <string name="settings_title">설정</string>
    <string name="system_settings">시스템 설정</string>
    <string name="screen_lock">화면 잠금</string>
    <string name="vibration">진동</string>
    <string name="on">ON</string>
    <string name="notification_settings">알림 설정</string>
    <string name="notifications">알림</string>
    <string name="personal_security">개인 / 보안</string>
    <string name="family_connection">가족 연결</string>
    <string name="logout">로그아웃</string>
    <string name="login">로그인</string>
    <string name="back_button">뒤로가기</string>
    <string name="schedule_add">일정 추가</string>
    <string name="default_date_time">2024년 9월 23일(월) 14:00</string>
    <string name="all_day">종일</string>
    <string name="meeting">모임</string>
    <string name="birthday">생일</string>
    <string name="hospital">병원</string>
    <string name="other">기타</string>
    <string name="memo_hint">내용을 입력해 주세요</string>
    <string name="location_hint">장소를 입력해 주세요</string>
    <string name="save">저장</string>
    <string name="date_label">일시</string>
    <string name="category_label">일정 분류</string>
    <string name="memo_label">메모</string>
    <string name="location_label">장소</string>
    <string name="setting_button_description">Settings</string>
    <string name="code_copy">코드 복사</string>
    <string name="family_connect">가족 연결</string>
    <string name="schedule_check">일정 확인</string>
    <string name="input_placeholder">내용을 입력해 주세요</string>
    <string name="date_detail">2024년 9월 23일(월) 14:00</string>
    <string name="time">일시</string>
    <string name="category">일정 분류</string>
    <string name="memo">메모</string>
    <string name="location">장소</string>
    <string name="mom_checkup">엄마 건강검진</string>
    <string name="letter_box">편지 보관함</string>
    <string name="to_daughter">To. 딸</string>
    <string name="from_daughter">From. 딸</string>
    <string name="from_mom">From. 엄마</string>
    <string name="from_sibling">From. 동생</string>
    <string name="to_sibling">To. 동생</string>
    <string name="to_mom">To. 엄마</string>
    <string name="from_father">From. 아빠</string>
    <string name="to_father">To. 아빠</string>
</resources>
