<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F2EA">

    <!-- '우리 가족에게 코드를 공유해 보세요!' 안내 텍스트 -->

    <ImageView
        android:id="@+id/close_icon"
        android:layout_width="33dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="353dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="824dp"
        android:src="@drawable/close_icon" />

    <TextView
        android:id="@+id/textView_instruction"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="687dp"
        android:text="@string/family_code_intro"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/family_code"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="232dp"

        android:layout_marginEnd="112dp"
        android:layout_marginBottom="616dp"
        android:fontFamily="sans-serif"
        android:text="@string/xxx"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/family_name"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="45dp"

        android:layout_marginEnd="301dp"
        android:layout_marginBottom="819dp"
        android:fontFamily="sans-serif"
        android:text="@string/family_connect"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/family_code_suffix"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="181dp"
        android:layout_marginTop="296dp"

        android:layout_marginEnd="172dp"
        android:layout_marginBottom="571dp"
        android:fontFamily="sans-serif"
        android:text="@string/family_code_suffix"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/share_code_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/family_code_suffix"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="554dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="148dp"
        android:fontFamily="sans-serif"
        android:text="@string/share_code_prompt"
        android:textColor="#5E5E5E"
        android:textSize="12sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="758dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_beige_view"
        android:elevation="1dp" />

    <TextView
        android:id="@+id/textView_get_code"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="176dp"
        android:layout_marginTop="779dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="86dp"
        android:elevation="5dp"
        android:text="@string/code_copy"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>