<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F2EA">

    <TextView
        android:id="@+id/login_progress"
        android:layout_width="149dp"
        android:layout_height="26dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="167dp"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/login_id_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/login_progress"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_white_view"
        android:fontFamily="sans-serif"
        android:hint="@string/id"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#848484"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/login_password_text"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/login_id_text"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_white_view"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#848484"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/login_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_text"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="sans-serif"
        android:text="@string/login_instruction"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#848484"
        android:textSize="14sp" />

    <Button
        android:id="@+id/next_button_background"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/login_instruction"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:text="로그인"
        android:textColor="#000000"
        android:textStyle="bold"
        android:background="@drawable/rounded_brown_view"
        android:elevation="2dp" />

    <Button
        android:id="@+id/signup_button_background"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/next_button_background"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_gray_view"
        android:elevation="2dp"
        android:text="회원가입"
        android:textColor="#000000"
        android:textStyle="bold" />
</RelativeLayout>
