<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F2EA">

    <!-- 상단 안내 텍스트 -->
    <TextView
        android:id="@+id/textView_instruction"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="167dp"
        android:text="@string/instruction_text"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/textView_input_prompt"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@+id/textView_instruction"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_white_view"
        android:elevation="5dp"
        android:hint="@string/input_prompt_text"
        android:textColorHint="#BDBDBD"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="#000000"/>


    <Button
        android:id="@+id/CompleteButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@+id/textView_input_prompt"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:text="입력 완료"
        android:background="@drawable/rounded_brown_view"
        android:textColor="#000000"
        android:elevation="1dp" />

    <TextView
        android:id="@+id/textView_get_code"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@+id/textView_input_prompt"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_first_family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/next_button_background"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="66dp"
        android:gravity="center"
        android:text="@string/first_family_text"
        android:textColor="#5E5E5E"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_below="@id/textView_first_family"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_beige_view"
        android:elevation="1dp" />

    <!-- Next 버튼 추가 -->
    <Button
        android:id="@+id/next_button_background"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
     android:layout_marginStart="0dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:gravity="center"
    android:background="@drawable/rounded_brown_view"
    android:elevation="0dp"
    android:fontFamily="sans-serif"
    android:text="제가 가족 중 처음이에요"
    android:textColor="#000000"
    android:contentDescription="Next Button" />

</RelativeLayout>
